--- a/closure/Cargo.toml
+++ b/closure/Cargo.toml
@@ -1,16 +1,8 @@
 [package]
-name = "minigrep"
+name = "closure"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-# cargo build时执行的配置
-[profile.dev]
-opt-level = 0
-
-#cargo build -- release时执行的配置
-[profile.release]
-opt-level = 3
